fixed issue with dark mode

--- a/src/client/index.scss
+++ b/src/client/index.scss
@@ -1127,5 +1127,8 @@ $modal-anim-time: 0.15s;
         .notification-content {
             background-color: $almost-black !important;
         }
+        .notification-info {
+            background-color: $almost-black !important;
+        }
     }
 }
